# cv-tutorial

./: .gitignore  README.md  pyproject.toml
general/: separation.py
hugging_face/: image_segmentation.ipynb  object_detection.ipynb
plotting/: __init__.py
src/detectron2_tutorial/: Detector.py
src/hugging_face/: image_segmentation.ipynb  object_detection.ipynb
src/plotting/: bbox.py
