[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "3.8.12"
requests = "^2.28.1"
Pillow = "^9.2.0"
numpy = "^1.23.2"
transformers = {extras = ["torch"], version = "^4.21.1"}
timm = "^0.6.7"
matplotlib = "^3.5.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
ipykernel = "^6.15.1"

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta:__legacy__"
